--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{318372D4-06FA-46A3-BE77-516651418265}</ProjectGuid>
     <RootNamespace>Project1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
+    <ProjectName>Guess My Number</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
